--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://asaljakin.github.io/goit-react-woolf-hw-04-phonebook/",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,9 @@
     "nanoid": "^5.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.70.0",
     "web-vitals": "^2.1.3"
   },
